changed background, one logo

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <img class="navbar-brand img-navbar" src="assets/img/output_white_image.png" href="#page-top"/>
-                <img class="navbar-brand img-navbar" src="assets/img/output_black_image.webp" href="#page-top"/>
+                <img class="navbar-brand img-navbar logo-light" src="assets/img/output_white_image.png" alt="Light Logo" />
+                <img class="navbar-brand img-navbar logo-dark d-none" src="assets/img/output_black_image.webp" alt="Dark Logo" />
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -40,7 +40,7 @@
             <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
-                        <h1 class="mx-auto my-0 text-uppercase">Let's build your space together with us!</h1>
+                        <h1 class="mx-auto my-0 text-uppercase">Let's build space together!</h1>
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">Tatraspace is a space software house that helps you get your product off the ground!</h2>
                         <a class="btn btn-primary" href="#about">Get Started</a>
                     </div>
@@ -69,8 +69,8 @@
             <div class="container px-4 px-lg-5">
                 <!-- New Space-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-6 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
-                    <div class="col-xl-6 col-lg-5">
+                    <div class="col-xl-4 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                    <div class="col-xl-8 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4>New space</h4>
                             <p class="text-black-50 mb-0">Explore new horizons with our New Space solutions, tailored to meet the demands of the evolving private spaceflight industry. From satellite deployment to innovative space technologies, we offer comprehensive software solutions to support your ventures beyond Earth’s atmosphere.</p>
@@ -79,18 +79,18 @@
                 </div>
                 <!-- Cloud-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-6 col-lg-5">
+                    <div class="col-xl-8 col-lg-5">
                         <div class="featured-text-right text-center text-lg-left">
                             <h4>Cloud</h4>
                             <p class="text-black-50 mb-0">Our cloud services provide seamless access to scalable and reliable computing resources over the internet. Leverage our expertise to optimize your software’s performance and accessibility, ensuring efficient data storage, retrieval, and computation.</p>
                         </div>
                     </div>
-                    <div class="col-xl-6 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                    <div class="col-xl-4 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
                 </div>
                 <!-- Embedded-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-6 col-lg-6"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
-                    <div class="col-xl-6 col-lg-6">
+                    <div class="col-xl-4 col-lg-6"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                    <div class="col-xl-8 col-lg-6">
                         <div class="featured-text text-center text-lg-left">
                             <h4>Embedded</h4>
                             <p class="text-black-50 mb-0">Harness the power of our embedded systems expertise to integrate cutting-edge software solutions directly into your hardware. Benefit from our precision engineering to enhance the performance and functionality of your devices and equipment.</p>
@@ -99,13 +99,13 @@
                 </div>
                 <!-- Devops-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-6 col-lg-6">
+                    <div class="col-xl-8 col-lg-6">
                         <div class="featured-text-right text-center text-lg-left">
                             <h4>Devops</h4>
                             <p class="text-black-50 mb-0">Streamline your development and operational processes with our DevOps solutions. We enable continuous integration and deployment, fostering collaboration between your development and IT teams for faster, more reliable software delivery.</p>
                         </div>
                     </div>
-                    <div class="col-xl-6 col-lg-6"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                    <div class="col-xl-4 col-lg-6"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
                 </div>
             </div>
         </section>
