--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                     <div class="col-lg-8">
                         <h2 class="text-white mb-4">About us</h2>
                         <p class="text-white-50">
-                            Tatracloud was founded in 2024 by Software Engineers with strong knowledge of Embedded and Cloud applications.
+                            Tatraspace was founded in 2024 by Software Engineers with strong knowledge of Embedded and Cloud applications.
                             As a Software House, we have solid experience with the New Space industry.
-                            The people on our team, before joining Tatracloud, gained experience in companies like Dolby, Intel, Nokia, and SatRev.
+                            The people on our team, before joining Tatraspace, gained experience in companies like Dolby, Intel, Nokia, and SatRev.
                             Thanks to this we have a diverse field of expertise and can help with any challenge you may face.
                         </p>
                     </div>
