--- a/index.html
+++ b/index.html
@@ -57,12 +57,25 @@
                             Tatraspace is a Software House with strong expertise in Space and Embedded Systems.
                             As a company, we have proudly collaborated with Revolv Space, delivering well-tested software for the New Space industry,
                             and with Muke, showcasing our versatility across diverse projects. With our proven experience, we are ready to propel your Space ambitions to success.
-                        </p>
+                         </p>
                     </div>
                 </div>
-                <img class="img-fluid" src="assets/img/ipad.png" alt="..." />
+                <div class="row gx-4 gx-lg-5 justify-content-center mt-5">
+                    <div class="col-lg-8">
+                        <h2 class="text-white mb-4">Our clients</h2>
+                        <div class="row gx-5 gy-5 justify-content-center">
+                            <div class="col-6 col-md-3 text-center">
+                                <img src="assets/img/revolv_Space_logo.png" alt="revolv" class="img-fluid mb-5">
+                            </div>
+                            <div class="col-6 col-md-3 text-center">
+                                <img src="assets/img/MukeLogo.jpeg" alt="muke" class="img-fluid mb-5">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
+        
         <!-- Projects-->
         <section class="projects-section bg-light" id="services">
             <div class="container px-4 px-lg-5">
@@ -108,53 +121,10 @@
                 </div>
             </div>
         </section>
-         <!-- Signup-->
-         <section class="signup-section" id="contact">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5">
-                    <div class="col-md-10 col-lg-8 mx-auto text-center">
-                        <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                        <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- * * SB Forms Contact Form * *-->
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- This form is pre-integrated with SB Forms.-->
-                        <!-- To make this form functional, sign up at-->
-                        <!-- https://startbootstrap.com/solution/contact-forms-->
-                        <!-- to get an API token!-->
-                        <form class="form-signup" id="contactForm" data-sb-form-api-token="API_TOKEN">
-                            <!-- Email address input-->
-                            <div class="row input-group-newsletter">
-                                <div class="col"><input class="form-control" id="emailAddress" type="email" placeholder="Enter email address..." aria-label="Enter email address..." data-sb-validations="required,email" /></div>
-                                <div class="col-auto"><button class="btn btn-primary disabled" id="submitButton" type="submit">Notify Me!</button></div>
-                            </div>
-                            <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:required">An email is required.</div>
-                            <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:email">Email is not valid.</div>
-                            <!-- Submit success message-->
-                            <!---->
-                            <!-- This is what your users will see when the form-->
-                            <!-- has successfully submitted-->
-                            <div class="d-none" id="submitSuccessMessage">
-                                <div class="text-center mb-3 mt-2 text-white">
-                                    <div class="fw-bolder">Form submission successful!</div>
-                                    To activate this form, sign up at
-                                    <br />
-                                    <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                                </div>
-                            </div>
-                            <!-- Submit error message-->
-                            <!---->
-                            <!-- This is what your users will see when there is-->
-                            <!-- an error submitting the form-->
-                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3 mt-2">Error sending message!</div></div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </section>
         <!-- Contact-->
-        <section class="contact-section bg-black">
+        <section class="contact-section bg-black" id="contact">
             <div class="container px-4 px-lg-5">
+                <h2 class="text-white mb-5 text-center">Contact us!</h2>
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-4 mb-3 mb-md-0">
                         <div class="card py-4 h-100">
@@ -166,7 +136,7 @@
                             </div>
                         </div>
                     </div>
-                    </div>
+                </div>
                 </div>
                 <div class="social d-flex justify-content-center">
                     <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
