removed pictures, changed borders

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
             <div class="container px-4 px-lg-5">
                 <!-- New Space-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-4 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
-                    <div class="col-xl-8 col-lg-5">
-                        <div class="featured-text text-center text-lg-left">
+                    <div class="col-xl-6 col-lg-6"></div>
+                    <div class="col-xl-6 col-lg-6">
+                        <div class="featured-text-right text-center text-lg-left">
                             <h4>New space</h4>
                             <p class="text-black-50 mb-0">Explore new horizons with our New Space solutions, tailored to meet the demands of the evolving private spaceflight industry. From satellite deployment to innovative space technologies, we offer comprehensive software solutions to support your ventures beyond Earth’s atmosphere.</p>
                         </div>
@@ -91,19 +91,19 @@
                 </div>
                 <!-- Cloud-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-5">
-                        <div class="featured-text-right text-center text-lg-left">
+                    <div class="col-xl-6 col-lg-5">
+                        <div class="featured-text text-center text-lg-left">
                             <h4>Cloud</h4>
                             <p class="text-black-50 mb-0">Our cloud services provide seamless access to scalable and reliable computing resources over the internet. Leverage our expertise to optimize your software’s performance and accessibility, ensuring efficient data storage, retrieval, and computation.</p>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                    <div class="col-xl-6 col-lg-7"></div>
                 </div>
                 <!-- Embedded-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-4 col-lg-6"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
-                    <div class="col-xl-8 col-lg-6">
-                        <div class="featured-text text-center text-lg-left">
+                    <div class="col-xl-6 col-lg-6"></div>
+                    <div class="col-xl-6 col-lg-6">
+                        <div class="featured-text-right text-center text-lg-left">
                             <h4>Embedded</h4>
                             <p class="text-black-50 mb-0">Harness the power of our embedded systems expertise to integrate cutting-edge software solutions directly into your hardware. Benefit from our precision engineering to enhance the performance and functionality of your devices and equipment.</p>
                         </div>
@@ -111,13 +111,13 @@
                 </div>
                 <!-- Devops-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-6">
-                        <div class="featured-text-right text-center text-lg-left">
+                    <div class="col-xl-6 col-lg-6">
+                        <div class="featured-text text-center text-lg-left">
                             <h4>Devops</h4>
                             <p class="text-black-50 mb-0">Streamline your development and operational processes with our DevOps solutions. We enable continuous integration and deployment, fostering collaboration between your development and IT teams for faster, more reliable software delivery.</p>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-lg-6"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                    <div class="col-xl-6 col-lg-6"></div>
                 </div>
             </div>
         </section>
@@ -138,11 +138,7 @@
                     </div>
                 </div>
                 </div>
-                <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
-                </div>
+
             </div>
         </section>
         <!-- Footer-->
