--- a/index.html
+++ b/index.html
@@ -54,10 +54,19 @@
                     <div class="col-lg-8">
                         <h2 class="text-white mb-4">About us</h2>
                         <p class="text-white-80">
-                            Tatraspace is a Software House with strong expertise in Space and Embedded Systems.
-                            As a company, we have proudly collaborated with Revolv Space, delivering well-tested software for the New Space industry,
-                            and with Muke, showcasing our versatility across diverse projects. With our proven experience, we are ready to propel your Space ambitions to success.
-                         </p>
+                            Tatraspace is a dedicated software house specializing in space embedded systems. 
+                            As a startup, we have begun making our mark in the New Space industry through collaborations with companies like Revolv Space. 
+                            Our team of passionate experts brings valuable experience from the space industry, focusing strongly on code quality and testability. 
+                            <br>
+                            <br>
+                            We believe that automated testing and remote access should be standard practices in the embedded systems industry.
+                            Committed to ensuring that your product performs reliably every time, we aim to accelerate your product development by enhancing code quality and readability.
+                            By providing remote access to your laboratory equipment, we eliminate geographical barriers, connecting your hardware with the right engineers wherever they are. 
+                            <br>
+                            <br>
+                            We simplify automated testing processes to make your devices more robust, and through a continuous integration approach, we ensure that every new piece of code works seamlessly.
+                            With our growing expertise, we are ready to support your space ambitions.
+                        </p>
                     </div>
                 </div>
                 <div class="row gx-4 gx-lg-5 justify-content-center mt-5">
@@ -79,42 +88,58 @@
         <!-- Projects-->
         <section class="projects-section bg-light" id="services">
             <div class="container px-4 px-lg-5">
-                <!-- New Space-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
                     <div class="col-xl-6 col-lg-6"></div>
                     <div class="col-xl-6 col-lg-6">
                         <div class="featured-text-right text-center text-lg-left">
-                            <h4>New space</h4>
-                            <p class="text-black-50 mb-0">Explore new horizons with our New Space solutions, tailored to meet the demands of the evolving private spaceflight industry. From satellite deployment to innovative space technologies, we offer comprehensive software solutions to support your ventures beyond Earth’s atmosphere.</p>
+                            <h4>Embedded Software Development & Consultancy</h4>
+                            <p class="text-black-50 mb-0">We provide comprehensive code reviews and audits, developing software for embedded devices with a strong emphasis on quality. Our software comes with extensive documentation and testing, facilitating straightforward future development.
+                            </p>
                         </div>
                     </div>
                 </div>
-                <!-- Cloud-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
                     <div class="col-xl-6 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Cloud</h4>
-                            <p class="text-black-50 mb-0">Our cloud services provide seamless access to scalable and reliable computing resources over the internet. Leverage our expertise to optimize your software’s performance and accessibility, ensuring efficient data storage, retrieval, and computation.</p>
+                            <h4>Automated Test Setup from Scratch</h4>
+                            <p class="text-black-50 mb-0">We specialize in creating automated test setups and integrating them into continuous integration pipelines like GitLab CI. This enhances the reliability and efficiency of your testing processes, leading to more robust devices.</p>
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-7"></div>
                 </div>
-                <!-- Embedded-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
                     <div class="col-xl-6 col-lg-6"></div>
                     <div class="col-xl-6 col-lg-6">
                         <div class="featured-text-right text-center text-lg-left">
-                            <h4>Embedded</h4>
-                            <p class="text-black-50 mb-0">Harness the power of our embedded systems expertise to integrate cutting-edge software solutions directly into your hardware. Benefit from our precision engineering to enhance the performance and functionality of your devices and equipment.</p>
+                            <h4>Remote Access to Hardware</h4>
+                            <p class="text-black-50 mb-0">We set up remote access to your lab equipment, enabling embedded software development from anywhere in the world. This service overcomes geographical limitations, connecting your hardware with the perfect engineers regardless of their location.</p>
                         </div>
                     </div>
                 </div>
-                <!-- Devops-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
                     <div class="col-xl-6 col-lg-6">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Devops</h4>
-                            <p class="text-black-50 mb-0">Streamline your development and operational processes with our DevOps solutions. We enable continuous integration and deployment, fostering collaboration between your development and IT teams for faster, more reliable software delivery.</p>
+                            <h4>Mission Support</h4>
+                            <p class="text-black-50 mb-0">Our mission support services include planning in-orbit tests, integrating with ground stations, debugging issues that arise in Space, and designing comprehensive test scenarios to ensure mission success.</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6"></div>
+                </div>
+                <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
+                    <div class="col-xl-6 col-lg-6"></div>
+                    <div class="col-xl-6 col-lg-6">
+                        <div class="featured-text-right text-center text-lg-left">
+                            <h4>Payload Integration Services</h4>
+                            <p class="text-black-50 mb-0">We assist in integrating Commercial Off-The-Shelf (COTS) components into satellite buses and develop On-Board Computer (OBC) software, streamlining the payload integration process.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
+                    <div class="col-xl-6 col-lg-6">
+                        <div class="featured-text text-center text-lg-left">
+                            <h4>Testing as a Service</h4>
+                            <p class="text-black-50 mb-0">We analyze your product to identify weak points and uncover potential pitfalls that could become critical in orbit. By helping you mitigate these risks, we enhance the reliability and success of your mission.
+                            </p>
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-6"></div>
