--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <section class="about-section text-center">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-lg-8">
-                        <h2 class="text-white mb-4" id="about">About us</h2>
+                    <div class="col-lg-8" id="about">
+                        <h2 class="text-white mb-4">About us</h2>
                         <p class="text-white-80">
                             Tatraspace is a dedicated software house specializing in space embedded systems. 
                             As a startup, we have begun making our mark in the New Space industry through collaborations with companies like Revolv Space. 
