--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Tatraspace - Homepage</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/favicon2.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -148,6 +148,47 @@
         <!-- Contact-->
         <section class="contact-section bg-black" id="contact">
             <div class="container px-4 px-lg-5">
+                <h2 class="text-white mb-5 text-center">Our team</h2>
+                <div class="container py-5">
+                    <div class="row justify-content-center text-white text-center">
+                        <div class="col-6 col-md-4 col-lg-3 mb-4">
+                            <div class="position-relative w-100 mx-auto" style="max-width: 150px;">
+                                <img class="rounded-circle w-100 object-cover" src="assets/img/RR.png" alt="1">
+                                <div class="position-absolute top-0 start-0 w-100 h-100 rounded-circle"></div>
+                            </div>
+                            <p class=" mt-3 text-xl">Rafał Radomski</p>
+                            <p class="text-uppercase mt-1 text-sm">CEO</p>
+                        </div>
+                        <div class="col-6 col-md-4 col-lg-3 mb-4">
+                            <div class="position-relative w-100 mx-auto" style="max-width: 150px;">
+                                <img class="rounded-circle w-100 object-cover" src="assets/img/PS.png" alt="2">
+                                <div class="position-absolute top-0 start-0 w-100 h-100 rounded-circle"></div>
+                            </div>
+                            <p class="mt-3 text-xl">Paweł Skrzypczak</p>
+                            <p class="text-uppercase mt-1 text-sm">CTO</p>
+                        </div>
+                        <div class="col-6 col-md-4 col-lg-3 mb-4">
+                            <div class="position-relative w-100 mx-auto" style="max-width: 150px;">
+                                <img class="rounded-circle w-100 object-cover" src="assets/img/RL.png" alt="3">
+                                <div class="position-absolute top-0 start-0 w-100 h-100 rounded-circle"></div>
+                            </div>
+                            <p class="mt-3 text-xl">Rene Laflamme</p>
+                            <p class="text-uppercase mt-1 text-sm">Embedded Software Architect</p>
+                        </div>
+                        <!-- Team Member 4 -->
+                        <div class="col-6 col-md-4 col-lg-3 mb-4">
+                            <div class="position-relative w-100 mx-auto" style="max-width: 150px;">
+                                <img class="rounded-circle w-100 object-cover" src="assets/img/MS.png" alt="4">
+                                <div class="position-absolute top-0 start-0 w-100 h-100 rounded-circle"></div>
+                            </div>
+                            <p class="mt-3 text-xl">Mateusz Sołtys</p>
+                            <p class="text-uppercase mt-1 font-weight-normal text-sm">Web Development Specialist</p>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+            <div class="container px-4 px-lg-5">
                 <h2 class="text-white mb-5 text-center">Contact us!</h2>
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-4 mb-3 mb-md-0">
@@ -161,7 +202,7 @@
                         </div>
                     </div>
                 </div>
-                </div>
+            </div>
 
             </div>
         </section>
