--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         <section class="projects-section bg-light" id="services">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
+                    <h2 class="text-black mb-5 text-center">Services</h2>
                     <div class="col-xl-6 col-lg-6"></div>
                     <div class="col-xl-6 col-lg-6">
                         <div class="featured-text-right text-center text-lg-left">
