--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Tatraspace - Homepage</title>
+        <title>TatraSpace - Homepage</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon2.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -40,22 +40,22 @@
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">Software That Reaches Space!</h1>
-                        <h2 class="text-white-80 mx-auto mt-2 mb-5">Tatraspace is a space software house that helps you get your product off the ground!</h2>
+                        <h2 class="text-white-80 mx-auto mt-2 mb-5">TatraSpace is a Space software house that helps you get your product off the ground!</h2>
                         <a class="btn btn-primary" href="#about">Get Started</a>
                     </div>
                 </div>
             </div>
         </header>
         <!-- About-->
-        <section class="about-section text-center">
+        <section class="about-section text-center" >
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-lg-8" id="about">
-                        <h2 class="text-white mb-4">About us</h2>
+                    <div class="col-lg-8">
+                        <h2 class="text-white mb-4 pt-3" id="about">About us</h2>
                         <p class="text-white-80">
-                            Tatraspace is a dedicated software house specializing in space embedded systems. 
+                            TatraSpace is a dedicated software house specializing in Space embedded systems. 
                             As a startup, we have begun making our mark in the New Space industry through collaborations with companies like Revolv Space. 
-                            Our team of passionate experts brings valuable experience from the space industry, focusing strongly on code quality and testability. 
+                            Our team of passionate experts brings valuable experience from the Space industry, focusing strongly on code quality and testability. 
                             <br>
                             <br>
                             We believe that automated testing and remote access should be standard practices in the embedded systems industry.
@@ -64,7 +64,7 @@
                             <br>
                             <br>
                             We simplify automated testing processes to make your devices more robust, and through a continuous integration approach, we ensure that every new piece of code works seamlessly.
-                            With our growing expertise, we are ready to support your space ambitions.
+                            With our growing expertise, we are ready to support your Space ambitions.
                         </p>
                     </div>
                 </div>
@@ -208,7 +208,7 @@
             </div>
         </section>
         <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; Tatraspace 2024</div></footer>
+        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; TatraSpace 2024</div></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
