--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                 <img class="rounded-circle w-100 object-cover" src="assets/img/PS.png" alt="2">
                                 <div class="position-absolute top-0 start-0 w-100 h-100 rounded-circle"></div>
                             </div>
-                            <p class="mt-3 text-xl">Paweł Skrzypczak</p>
+                            <p class="mt-3 text-xl">Paweł Skrzypek</p>
                             <p class="text-uppercase mt-1 text-sm">CTO</p>
                         </div>
                         <div class="col-6 col-md-4 col-lg-3 mb-4">
