--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
                             <div class="col-6 col-md-3 text-center">
                                 <img src="assets/img/MukeLogo.jpeg" alt="muke" class="img-fluid mb-5">
                             </div>
+                            <div class="col-6 col-md-3 text-center">
+                                <img src="assets/mail/lunar_tech.png" alt="lunar_tech" class="img-fluid mb-5">
+                            </div>
+                            <div class="col-6 col-md-3 text-center">
+                                <img src="assets/mail/spacelocker.png" alt="space_locker" class="img-fluid mb-5">
+                            </div>
                         </div>
                     </div>
                 </div>
