--- a/index.html
+++ b/index.html
@@ -152,7 +152,6 @@
                 </div>
             </div>
         </section>
-        <!-- Contact-->
         <section class="contact-section bg-black" id="contact">
             <div class="container px-4 px-lg-5">
                 <h2 class="text-white mb-5 text-center">Our team</h2>
@@ -182,7 +181,6 @@
                             <p class="mt-3 text-xl">Rene Laflamme</p>
                             <p class="text-uppercase mt-1 text-sm">Embedded Software Architect</p>
                         </div>
-                        <!-- Team Member 4 -->
                         <div class="col-6 col-md-4 col-lg-3 mb-4">
                             <div class="position-relative w-100 mx-auto" style="max-width: 150px;">
                                 <img class="rounded-circle w-100 object-cover" src="assets/img/MS.png" alt="4">
@@ -213,11 +211,14 @@
 
             </div>
         </section>
-        <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; TatraSpace 2024</div></footer>
-        <!-- Bootstrap core JS-->
+<footer class="footer bg-black small text-center text-white-50 py-3">
+  <div class="container px-4 px-lg-5">
+    &copy; TatraSpace 2025 |
+    <a href="/legal/" class="footer-link text-warning text-decoration-none mx-1">Legal Notice & Terms of Use</a> |
+    <a href="/privacy/" class="footer-link text-warning text-decoration-none mx-1">Privacy Policy</a>
+  </div>
+</footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
     </body>
 </html>
