--- a/legal/index.html
+++ b/legal/index.html
@@ -8,6 +8,29 @@
   <link rel="icon" type="image/x-icon" href="/assets/favicon2.png" />
 </head>
 <body>
+
+ <nav class="navbar navbar-expand-lg navbar-dark fixed-top blur-navbar" id="mainNav">
+        <div class="container px-4 px-lg-5">
+            <img class="navbar-brand img-navbar" src="/assets/img/output_white_image.png" alt="TatraSpace Logo" />
+            <img class="navbar-brand img-navbar logo-dark d-none" src="assets/img/output_black_image.webp"
+                alt="Dark Logo" />
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation">
+                Menu
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="/wisent-wire/">Our product</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/#about">About us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/#services">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/#contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
   <main class="legal-page container px-4 px-lg-5 py-5">
     <h1 class="page-title">Legal Notice & Terms of Use</h1>
     <p class="page-text">
@@ -23,5 +46,8 @@
             <a class="footer-link" href="/privacy/">Privacy Policy</a>
     </div>
   </footer>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/scripts.js"></script>
 </body>
+
 </html>
