--- a/privacy/index.html
+++ b/privacy/index.html
@@ -10,6 +10,26 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top blur-navbar" id="mainNav">
+        <div class="container px-4 px-lg-5">
+            <img class="navbar-brand img-navbar" src="/assets/img/output_white_image.png" alt="TatraSpace Logo" />
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation">
+                Menu
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="/wisent-wire/">Our product</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">About us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <main class="privacy-page container px-4 px-lg-5 py-5">
         <h1 class="page-title">Privacy Policy</h1>
         <p class="page-date">Last updated: May 20, 2025</p>
@@ -47,6 +67,7 @@
                 <a class="footer-link" href="/privacy/">Privacy Policy</a>
             </div>
         </footer>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/scripts.js"></script>
 </body>
-
 </html>
